@@ -250,6 +250,11 @@ debugger_check( debugger_breakpoint_type type, libspectrum_dword value )
       if( breakpoint_check( bp, type, value ) ) {
 	debugger_mode = DEBUGGER_MODE_HALTED;
 	debugger_command_evaluate( bp->commands );
+
+        if( bp->life == DEBUGGER_BREAKPOINT_LIFE_ONESHOT ) {
+          debugger_breakpoints = g_slist_remove( debugger_breakpoints, bp );
+          free( bp );
+        }
       }
 
     }
@@ -351,11 +356,6 @@ debugger_breakpoint_trigger( debugger_breakpoint *bp )
 
   if( bp->condition && !debugger_expression_evaluate( bp->condition ) )
     return 0;
-
-  if( bp->life == DEBUGGER_BREAKPOINT_LIFE_ONESHOT ) {
-    debugger_breakpoints = g_slist_remove( debugger_breakpoints, bp );
-    free( bp );
-  }
 
   if( bp->type == DEBUGGER_BREAKPOINT_TYPE_TIME )
     bp->value.time.triggered = 1;
